--- a/templates/family_member/app_family_member_dashboard.html.twig
+++ b/templates/family_member/app_family_member_dashboard.html.twig
@@ -1,9 +1,6 @@
-
-
-{% block title %}Hello!{% endblock %}
+{% block title %}Family Member Dashboard{% endblock %}
 
 {% block stylesheets %}
-
     <style>
         .custom-table {
             background-color: #e9f5fc;
