--- a/templates/medication/edit.html.twig
+++ b/templates/medication/edit.html.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}Edit BiologicalData{% endblock %}
+
+{% block title %}Edit Medication{% endblock %}
 
 {% block body %}
-    <h1>Edit BiologicalData</h1>
+    <h1>Edit Medication</h1>
 
     {{ include('medication/_form.html.twig', {'button_label': 'Update'}) }}
 
