--- a/templates/medication/new.html.twig
+++ b/templates/medication/new.html.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}New BiologicalData{% endblock %}
+
+{% block title %}New Medication{% endblock %}
 
 {% block body %}
-    <h1>Create new BiologicalData</h1>
+    <h1>Create new Medication</h1>
 
     {{ include('medication/_form.html.twig') }}
 
