--- a/templates/medication/_delete_form.html.twig
+++ b/templates/medication/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_medication_delete', {'id': biological_datum.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ biological_datum.id) }}">
+<form method="post" action="{{ path('app_medication_delete', {'id': medication.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ medication.id) }}">
     <button class="btn">Delete</button>
 </form>
