--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,6 +5,7 @@
         {{ form_row(registrationForm.firstName) }}
         {{ form_row(registrationForm.lastName) }}
         {{ form_row(registrationForm.email) }}
+         {{ form_row(registrationForm.phoneNumber) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password',
             attr: {
