--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -48,5 +48,5 @@
     <a href="{{ path('calendar_new') }}">Create new</a>
     
     {# Bouton "Back" pour revenir au tableau de bord du propriétaire #}
-    <a href="{{ path('app_owner_dashboard') }}" class="btn btn-secondary">Back to Owner Dashboard</a>
+    <a href="{{ path('app_health_professional_doctor_dashboard') }}" class="btn btn-secondary">Back to Your Dashboard</a>
 {% endblock %}
