--- a/templates/family_member/access_denied.html.twig
+++ b/templates/family_member/access_denied.html.twig
@@ -1,1 +1,14 @@
-{% block title %}Invalid access code. Please try again{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Access Denied</title>
+</head>
+<body>
+    <h1>Access Denied</h1>
+    <p>{{ error }}</p>
+    <a href="{{ path('app_family_member_dashboard') }}">Back to Dashboard</a>
+</body>
+</html>
